ISPN-16346 Allow security manager installation since JDK 18 including